--- a/src/pages/questions/questions.html
+++ b/src/pages/questions/questions.html
@@ -4,18 +4,30 @@
 <ng-template #questionTemplatee>
     <div class="questionBody">
         <ion-card>
-          <h3 class="questions">
-            <div style="width:80%;float:left">
-                <p><b>Question :</b></p>
-                <p>{{question.currentQuestion.question}}</p>
-            </div>
-            <div style="width:20%;float:right">
-                <p> {{question.currentIndex}} / 20</p>
+            <div class="questions">
+                <!--style="width:85%;float:right;margin-top:15px"-->
+                <div class="item-md-12">
+                    <!--style="width:50%;float:left;"-->
+                    <div class="item-md-4">
+                        <p> {{question.currentIndex}} / 20</p>
+                    </div>
+                    <!--style="width: 50%;float:right;"-->
+                    <div class="item-md-4">
+                        <!--<p> Points: {{question.totalPoints}}</p>-->
+                    </div>
+                    <div class="item-md-4">
+                        <p> Timing : {{question.timer.min}}:{{question.timer.sec}}</p>
+                    </div>
+                </div>
             </div>
             <div style="clear:both"></div>
-          </h3>
+            <div style="width:80%;margin:auto;margin-top:50px;">
+                <p style="font-size:16px">{{question.currentQuestion.question}}</p>
+            </div>
+            
+            <div style="clear:both"></div>
           <ion-card-content>
-              <ion-list inset class="answerlist">
+              <ion-list class="answerlist">
                 <button outline round ion-item 
                 [ngClass]="{activate:i == question.selectedAnswerIndex}"
                 class="answerListval"
@@ -31,6 +43,6 @@
         [disabled]="!question.answerSelected"
         ion-button outline round 
         class="submitButton" 
-        (click)="question.setCurQuestion(question.currentIndex)">Next</button>
+        (click)="navPu()">Next</button>
       </div>
 </ng-template>
