--- a/src/pages/test/test.html
+++ b/src/pages/test/test.html
@@ -4,19 +4,20 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>User -Info</ion-title>
-  </ion-navbar>
-
-</ion-header>
 
 
 <ion-content padding style="margin-top:50px;">
     <ion-item>
       <ion-label class="label">Username : </ion-label>
-      <ion-input type="text" value=""></ion-input>
+      <ion-input type="text" [(ngModel)]="userS.userName" (keypress)="userS.changeUserAvatar($event.target.val)"></ion-input>
     </ion-item>
-    <button ion-button outline round class="submitButton">Button</button>
+    <ion-item style="margin-top:50px">
+      <ion-label>Difficulty</ion-label>
+      <ion-select [(ngModel)]="userS.difficultyChoosed">
+        <ion-option value="easy">Easy</ion-option>
+        <ion-option value="medium">Medium</ion-option>
+        <ion-option value="hard">Hard</ion-option>
+      </ion-select>
+    </ion-item>
+    <button ion-button outline round class="submitButton" (click)="userS.setUser()">Button</button>
 </ion-content>
